# scientificcomputing

1_OOSC/1_1_Prelims/: CMakeLists.txt  basictypes.cpp  cbr.cpp  cbr.py  complex.cpp  complexclass.h  functions.cpp  iostream.cpp  memory.cpp  namespaces.cpp  python_cbr.py  references_pointers.cpp
1_OOSC/1_2_BLA/: CMakeLists.txt  matrix.cpp  matrix_cast.cpp  matrix_operator.cpp  vector.cpp  vector_operator.cpp
2_NumLA/2_1_Prelim/: CMakeLists.txt  floating_point_rep.cpp  gauss_stability_example.cpp
2_NumLA/2_2_DenseSolvers/: CMakeLists.txt  LU_QR.cpp  LU_QR_complex.cpp  SVD.cpp  gauss.cpp  gauss_efficiency.cpp  gauss_stability.cpp  overdetermined.cpp  plot_poly_regression.py
2_NumLA/2_3_SparseMat/: CMakeLists.txt  LU_fill_in.cpp  Poisson.cpp  sparsematrixtest.cpp  sparsesolver_Eigen.cpp  visualize.py
2_NumLA/2_4_ItSolvers/: 2D_convection_diffusion.cpp  CG.cpp  CMakeLists.txt  GMRES.cpp
2_NumLA/2_x_Lapack/: CMakeLists.txt  LAPACK.cpp
3_Applications/3_1_EV/: CMakeLists.txt  QR.cpp  QR_shift.cpp  visualize.py  visualize_eigenfreq.py  waveequation.cpp  waveequation_Eigen.cpp
3_Applications/3_2_Newton/: CMakeLists.txt  data_20C.txt  fitting.cpp  newton.cpp  newton_autodiff.cpp  viscoelastic.h  visualize.py
Ex1/: A1  A1.cpp  A2  A2.cpp  A3.cpp  data_unix.txt  output.txt
Ex2/: A2.cpp  A3.cpp  SCmatrix.h  SCvector.h
Ex3/: ApplicationExample_Task1.cpp  ApplicationExample_Task2.cpp  CMakeLists.txt  SCCGSolver.h  SCGaussSeidelSolver.h  SCSparseMatrix.h  SCTridiagLUSolver.h.bak  SCTridiagSparseMatrix.h  SCTridiagSparseMatrix_mod.h  TridiagGSSolverTest.cpp  TridiagLUSolverTest.cpp
Ex3/.old/: _A1.cpp  _TridiagLUSolver.h
Ex4/: Aufgabe1.cpp  Aufgabe2.cpp  Aufgabe2_eigen.cpp  CMakeLists.txt  SCTridiagLUSolver.h  lapack_test.cpp  tridiag-eigenmodes.cpp
HUE/Ex1/: A3
HUE/Ex2/: A3.cpp  CMakeLists.txt  HermiteBandMatrix.h
SClinalg/: SCArnoldi.h  SCCGSolver.h  SCGMRESSolver.h  SCGaussSolver.h  SCHessenbergmatrix.h  SCLUSolver.h  SCQRSolver.h  SCQRSolver_Hessenberg.h  SCSVDSolver.h  SCSparseMatrix.h  SCTridiagSparseMatrix.h  SCmatrix.h  SCvector.h
helloworld/: CMakeLists.txt  HelloWorld
